@@ -65,7 +65,7 @@ start() {
 # get_mounts is our portable function to get mount information
 do_unmount() {
 	local cmd="$1" no_unmounts="$2" nodes="$3"
-	local l= fs= node= point= foo= fuser_opts="-m -c"
+	local l= fs= node= point= foo= fuser_opts="-m -c" pids= pid=
 	[[ $(uname) == "Linux" ]] && fuser_opts="-c"
 
 	get_mounts | sort -ur | while read point node fs foo ; do
@@ -83,20 +83,28 @@ do_unmount() {
 			fi
 		fi
 
-		retry=
+		ebegin "Unmounting ${point}"
+		declare -a siglist=( "TERM" "KILL" "KILL" )
+		retry=0
 		while ! ${cmd} "${point}" &>/dev/null ; do
-			# Kill processes still using this mount
-			fuser -k ${fuser_opts} "${point}" &>/dev/null
-			sleep 2
-			((retry--))
+			# Don't kill if it's us (/ and possibly /usr)
+			if [[ " $(fuser ${fuser_opts} "${point}" 2>/dev/null) " != *" $$ "* ]] ; then
+				fuser -"${siglist[${retry}]}" -k ${fuser_opts} "${point}" &>/dev/null
+				sleep 2
+			else
+				# No point in trying again, save time
+				retry=3
+			fi
+			((retry++))
 
 			# OK, try forcing things
-			if [[ ${retry} -le 0 ]] ; then
+			if [[ ${retry} -ge 2 ]] ; then
 				${cmd} -f "${point}" || retval=1
 				break
 			fi
 		done
 	done
+	eend ${retval}
 	return ${retval}
 }
 
